2008-05-14  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        <rdar://problem/5770054> JavaScript profiler (10928)
        - Turn on the profiler.

        * kjs/config.h:

2008-05-14  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        <rdar://problem/5770054> JavaScript profiler (10928)
        - Expose the new profiler functions to the WebInspector.

        * JavaScriptCore.exp:

2008-05-14  Kevin McCullough  <kmccullough@apple.com>

        Giving credit where credit is due.

        * ChangeLog:

2008-05-14  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Geoff and Sam.

        <rdar://problem/5770054> JavaScript profiler (10928)
        Add the ability to get percentages of total and self time for displaying
        in the WebInspector.

        * profiler/Profile.h:
        (KJS::Profile::totalProfileTime):
        * profiler/ProfileNode.cpp:
        (KJS::ProfileNode::totalPercent):
        (KJS::ProfileNode::selfPercent):
        * profiler/ProfileNode.h:
        * profiler/Profiler.h:
        (KJS::Profiler::currentProfile):

2008-05-14  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        <rdar://problem/5770054> JavaScript profiler (10928)
        - Rename FunctionCallProfile to ProfileNode.

        * GNUmakefile.am:
        * JavaScriptCore.exp:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * JavaScriptCoreSources.bkl:
        * profiler/FunctionCallProfile.cpp: Removed.
        * profiler/FunctionCallProfile.h: Removed.
        * profiler/Profile.cpp:
        (KJS::Profile::Profile):
        (KJS::Profile::willExecute):
        * profiler/Profile.h:
        (KJS::Profile::callTree):
        * profiler/ProfileNode.cpp: Copied from profiler/FunctionCallProfile.cpp.
        (KJS::ProfileNode::ProfileNode):
        (KJS::ProfileNode::willExecute):